--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
-body {
+body, html {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  scroll-behavior: smooth;
+  font-family: 'Nunito', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  box-sizing: border-box;
+}
+
+p, h1, h2, h3, h4 {
+  margin-bottom: 0;
+}
+
+.text--titleDashboard {
+  color: #FF9138;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 30px;
+}
+
+.container-page {
+  margin-top: 29px;
+    margin-left: 24px;
+    margin-right: 104px;
+}
+
+.container-page-header {
+  margin-bottom: 109px;
 }
