--- a/src/Page/Profile/Profile.scss
+++ b/src/Page/Profile/Profile.scss
@@ -1,34 +1,42 @@
 @import "../../style/Helper/mixin";
 
 #profile {
+    .profile__header {
+        margin-bottom: 109px;
+    }
     .profile__content {
-        background-color: white;
-        padding: 40px 24px;
-        .profile__contentLeft {
-            div {
-                .profile__contentLeftAvatar {
-                    width: 248px;
-                    height: 248px;
+        padding-right: 104px;
+        .profile__contentRow {
+            padding: 40px 24px;
+            background-color: white;
+            .profile__contentLeft {
+                div {
+                    .profile__contentLeftAvatar {
+                        width: 248px;
+                        height: 248px;
+                        border-radius: 50%;
+                    }
+                }
+                .profile__contentLeftIcon {
+                    position: absolute;
+                    width: 45px;
+                    height: 45px;
+                    left: 195px;
+                    top: 201px;
+                }
+                .profile__contentLeftName {
+                    @include styleText(#282739, 24px, 700, 36px);
+                    margin-top: 16px;
+                    margin-bottom: 14px;
+                    text-align: center;
                 }
             }
-            .profile__contentLeftIcon {
-                position: absolute;
-                width: 45px;
-                height: 45px;
-                left: 195px;
-                top: 206px;
-            }
-            .profile__contentLeftName {
-                @include styleText(#282739, 24px, 700, 36px);
-                margin-top: 16px;
-                margin-bottom: 14px;
-                text-align: center;
-            }
-        }
-        .profile__contentRight {
-            label {
-                @include styleText(#282739, 16px, 600, 24px);
-                margin-bottom: 8px;
+            .profile__contentRight {
+                padding-right: 24px;
+                label {
+                    @include styleText(#282739, 16px, 600, 24px);
+                    margin-bottom: 8px;
+                }
             }
         }
     }
