--- a/src/Page/UserLogin/UserLogin.scss
+++ b/src/Page/UserLogin/UserLogin.scss
@@ -2,7 +2,7 @@
 @import '../../style//Component/button';
 
 #userLogin {
-    .userLogin__formTop {
+    .userLogin__form {
         margin-bottom: 16px;
         .userLogin__formTextLabel {
             @include styleText(#37474F, 18px, 400, 27px);
