--- a/src/Template/UserTemplate/userTemplate.scss
+++ b/src/Template/UserTemplate/userTemplate.scss
@@ -8,6 +8,8 @@
             width: 400px;
             .userLogin-template__Logo {
                 margin-bottom: 98px;
+                width: 200px;
+                height: 200px;
             }
         }
     }
