--- a/src/Page/Dashboard/Dashboard.scss
+++ b/src/Page/Dashboard/Dashboard.scss
@@ -13,9 +13,18 @@
         padding-right: 21px;
         padding-bottom: 7px;
         margin-bottom: 12px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 120px;
         .dashboard__numberTop {
             margin-bottom: 12px;
             .dashboard__numberTopText {
+                @include styleText(#535261, 20px, 700, 18px);
+                margin-left: 12px;
+                margin-bottom: 5px
+            }
+            .dashboard__numberBottomText {
                 @include styleText(#535261, 14px, 700, 18px);
                 margin-left: 12px;
             }
@@ -44,50 +53,10 @@
         }
     }
 
-    .dashboard__chart {
-        background: #ffffff;
-        border-radius: 12px;
-        height: 580px;
-        .dashboard__chartContent {
-            padding-top: 24px;
-            padding-bottom: 33px;
-            padding-right: 24px;
-            padding-left: 24px;
-            .dashboard__chartContentTop {
-                .dashboard__chartContentTopLeft {
-                    .dashboard__chartTitle {
-                        @include styleText(#282739, 20px, 700, 30px);
-                        margin-bottom: 4px;
-                    }
-                    .dashboard__chartPicker {
-                        span {
-                            @include styleText(#a9a9b0, 14px, 400, 21px);
-                        }
-                        .ant-picker {
-                            background-color: transparent;
-                            border: none;
-                            padding: 0;
-                            .ant-picker-input > input[disabled] {
-                                @include styleText(#a9a9b0, 14px, 400, 21px);
-                            }
-                            .ant-picker-suffix {
-                                display: none;
-                            }
-                        }
-                    }
-                }
-                .dashboard__chartContentTopRight {
-                    .dashboard__chartViewSelect {
-                        @include styleText(#282739, 16px, 600, 24px);
-                    }
-                    .dashboard__chartSelect {
-                        margin-left: 8px;
-                        .ant-select-selector {
-                            @include styleText(#7e7d88, 16px, 400, 24px);
-                            height: 42px;
-                        }
-                    }
-                }
+    .dashboard__left {
+        .dashboard__leftContent {
+            .text--titleBottom {
+                margin-bottom: 50px;
             }
         }
     }
@@ -97,50 +66,11 @@
         padding-left: 24px;
         padding-right: 24px;
         padding-bottom: 29px;
+        min-height: 100vh;
         .dashboard__rightContent {
             margin-top: 16px;
             .text--titleBottom {
-                margin-bottom: 16px;
-            }
-            .dashboard__rightProgress {
-                box-shadow: 2px 2px 15px rgba(70, 64, 67, 0.1);
-                border-radius: 12px;
-                margin-bottom: 12px;
-                padding-left: 16px;
-                padding-top: 11px;
-                padding-bottom: 12px;
-                .dashboard__rightProgressNumber {
-                    @include styleText(#535261, 24px, 800, 36px);
-                }
-                .dashboard__rightProgressIconText {
-                    margin-left: 4px;
-                }
-                .dashboard__rightProgressIconTextOrange {
-                    @include styleText(#ff7506, 14px, 600, 21px);
-                }
-                .dashboard__rightProgressIconTextGreen {
-                    @include styleText(#35c75a, 14px, 600, 21px);
-                }
-                .dashboard__rightProgressIconTextBlue {
-                    @include styleText(#4277ff, 14px, 600, 21px);
-                }
-                .dashboard__rightProgressWork {
-                    margin-left: 37px;
-                    .dashboard__rightProgressWorkText {
-                        @include styleText(#7e7d88, 12px, 400, 21px);
-                        width: 96px;
-                        margin-right: 3px;
-                    }
-                    .dashboard__rightProgressWorkNumberOrange {
-                        @include styleText(#ff7506, 14px, 700, 18px);
-                    }
-                    .dashboard__rightProgressWorkNumberGreen {
-                        @include styleText(#35c75a, 14px, 700, 18px);
-                    }
-                    .dashboard__rightProgressWorkNumberBlue {
-                        @include styleText(#4277ff, 14px, 700, 18px);
-                    }
-                }
+                margin-bottom: 50px;
             }
         }
         .dashboard__calendar {
